Incorporate changes from the stage to the master branch (#12)
* create empty branch

* fix: unlocking account catch

* fix: critical bugs, styles

* fix: menu

* fix: menu links styles

* fix: important bugs and visual

* fix: burner wallet login

* fix: texts

* fix: empty metamask stuck

* fix: nax deposit, unlock icon

* fix: fee on maxvalue, fee on single token

* fix: max deposit fee

* fix: small balances

* fix: max value btn

* fix: max value, close modal

* fix: gas

* fix: token then address

* fix: diff err for tx types

* fix: tx addresses

* fix: update, links

* fix: stage one

* feat: stage two

* feat: stage three

* feat: stage three fixes

* fix: errors

* feat: confirm count

* feat: add Bugsnag

* fix: tokeninfo

* fix(jsx): incossistent `transform` attribute

* fix: awaited bug

* fix: alpha to beta

* fix: bugs

* fix: rm hardcoded

* Split the build script for the smaller pieces

* Add .env files for all environments
* Make project names more consistent
* Refactor Dockerfile
* Update vulnerable dependencies
* Sync dependencies lock file
* Add deploy scheme to the README
* Add webpack compression plugin

* Add missing comma

* Add a new job to the bamboo specs

* Enable static code analysis

* Update lighthouse analysis script

* do not cache anything in browser

* hardcode nocache on top level

* fix: dyn import `Portis` to defer large network payloads

* feat: set all env vars

Pass new environment variables to the build stage

fix: size

fix: add prefix

fix: typing

fix: criticals

fix: comments

fix: contacts

fix: config

fix: reports

* fix: hotfixes

* fix(build): pass correct build params

* fix(build): pass correct build params

* feat: updating modal message on first-time Metamask sign-up
chore(tsconfig.json): tuned some options

* fix(build): pass correct build params

* fix: texts, styles

* fix: styles

* fi

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -96,10 +96,14 @@
     width: 90vw;
     max-width: 505px;
     margin-top: 16px;
-    padding-top: 27px;
-    padding-bottom: 22px;
+    padding: 27px 0 22px;
     background-color: var(--modal-bg-color);
     border-radius: 5px;
+
+    & > .cta-wrapper {
+      width: 100%;
+      padding: 0 25px;
+    }
 
     & > input {
       margin-bottom: 15px;
@@ -129,6 +133,7 @@
     position: relative;
     width: calc(100% - 45px);
     height: 36px;
+    margin-top: 25px;
     padding-left: 42px;
     color: var(--dark-color);
     background-color: var(--input-color);
@@ -142,6 +147,7 @@
   }
 
   &-title {
+    margin-bottom: 0;
     color: var(--dark-color);
     font-weight: var(--bold-font-weight);
     font-size: var(--large-font-size);
@@ -162,6 +168,10 @@
 
     &.empty {
       cursor: default;
+    }
+
+    &-left {
+      margin-right: 15px;
     }
 
     &-status {
@@ -221,6 +231,7 @@
 
           span {
             margin-right: 10px;
+            word-break: break-all;
           }
 
           .label-done, .label-verifying {
@@ -389,7 +400,8 @@
       bottom: 30px; 
       left: 50%;
       display: none;
-      width: auto; 
+      width: auto;
+      min-width: 100px; 
       padding: 10px;
       text-align: center;
 
@@ -496,6 +508,11 @@
     & > p {
       margin-bottom: 0;
       color: var(--dark-color);
+
+      &.undo-btn {
+        margin-left: 0;
+        color: var(--button-bg-color);
+      }
     }
 
     & > span {
@@ -582,6 +599,7 @@
     }
 
     &-title {
+      margin-bottom: 0;
       font-size: var(--xl-font-size);
     }
 
