--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -18,12 +18,19 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    padding: 30px;
+    padding: 10px;
   }
 
   &-link {
-    margin-right: 10px;
+    margin-right: 30px;
+    margin-bottom: 10px;
     color: var(--links-color);
+    font-size: var(--sm-font-size);
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+    
 
     &:visited {
       color: var(--links-color);
@@ -43,11 +50,34 @@
 
   &-menu {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 500px;
     margin-top: 30px;
     color: var(--shaded-color);
     text-align: center;
   }
+}
+
+@media screen and (min-width: 720px) {
+  .footer {
+    &-link {
+      &:last-of-type {
+        margin-right: 40px;
+      }
+
+      font-size: var(--md-font-size);
+    }
+
+    &-menu {
+      max-width: 100%;
+    }
+
+    &-wrapper {
+      padding: 30px;
+      font-size: var(--md-font-size);
+    }
+  }  
 }
 
 @media screen and (min-width: 760px) {
